--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "buffer-pool"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
 license = "MIT"
 description = "A vector of vectors backed by one contiguous vector - allows mutable borrows of non-overlapping regions."
+repository = "https://github.com/bennetthardwick/buffer-pool"
+readme = "README.md"
+categories = [ "algorithms", "data-structures" ]
+keywords = [ "vector", "buffer" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
